gobmkida/g1/owl_defend
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/owl_defend/src/engine/owl.c:2251:12: error: use of undeclared identifier 'owl_0'
init_owl( &owl_0, target, 0, 0, 1); 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/owl_defend/src/engine/owl.c:2252:19: error: use of undeclared identifier 'owl_0'
owl_make_domains( owl_0, 0LL); 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/owl_defend/src/engine/owl.c:2255:18: error: use of undeclared identifier 'owl_0'
list_goal_worms( owl_0, owl_goal_worm); 
                 ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/owl_defend/src/engine/owl.c:2269:49: error: use of undeclared identifier 'owl_0'
result[0] = do_owl_defend( target, &move, &wid, owl_0, 0, 0, 0); 
                                                ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/owl_defend/src/engine/owl.c:2292:1: error: use of undeclared identifier 'owl_0'
owl_0->goal, 
^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/owl_defend/src/obj/1/owl.o] Error 1
